--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <header>
       <container class="header__container">
         <div class="header__left">
-          <h1>Welcome to Calm</h1>
+          <h1>Welcome</h1>
           <h2>Your Journey to Mental Well-being Starts Here</h2>
           <p class="intro-1">
             At Calm, we believe that mental health is just as important as
